# inodeyou-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  output.txt
src/: main.cpp  main.h
src/fs/: fs_walk_path.cpp  fs_walk_path.h  populate_fs_inodes.cpp  populate_fs_inodes.h
src/tsk/: populate_tsk_inodes.cpp  populate_tsk_inodes.h  tsk_walk_path.cpp  tsk_walk_path.h
src/utils/: common.cpp  common.h  inode_utils.cpp  inode_utils.h  sync_and_cache.cpp
